# fusion25-prodev-lab

./: PRERESUISITES.md  README.md  agent.ipynb  hello-world.ipynb
resources/: company_policy.txt  main.py  main1.py  main2_multiple_agents.py  main3_validation.py  main4_hr.py  main5_permission_check_hr.py  main6_HITL.py  main_multiple_agents.py  main_multiple_agnets1.py  procurement_policy.txt
resources/prerequisites/: check-prerequisites.ps1  check-prerequisites.sh
src/company-agent/: .env  .env.example  AGENTS.md  DEBUGGING.md  README.md  agent.mermaid  eval-results.json  hr_auth.json  input.json  main.py  pyproject.toml  run-debug.sh  setup.sh  uipath.json  workflows.py
src/company-agent/.uipath/: .auth.json  .error_log  .telemetry.json
src/company-agent/__uipath/: state.db
src/company-agent/evals/eval-sets/: pto_test.json  resume_evals.json
src/company-agent/evals/evaluators/: uipath-json-similarity-5b1b72bd.json  uipath-json-similarity-7903b7d2.json  uipath-llm-judge-output-semantic-similarity-dcda879f.json  uipath-llm-judge-trajectory-78d30229.json
