[project]
name = "agent-JohnDoe"
version = "0.0.3"
description = "agent-JohnDoe"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "uipath-langchain>=0.0.106",
    "langchain-anthropic>=0.3.8",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain-openai>=0.3.33",
]
requires-python = ">=3.10"
